test/corpus/cond_null.txt
================================================================================
SELECT statement with IS NULL condition
================================================================================

SELECT * FROM Incident WHERE updatedtime IS NOT NULL;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause)
    (from_clause
      (identifier))
    (where_clause
      (null_condition
        (identifier)))))

================================================================================
SELECT statement with IS NOT NULL condition
================================================================================

SELECT * FROM Incident WHERE updatedtime IS NOT NULL;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause)
    (from_clause
      (identifier))
    (where_clause
      (null_condition
        (identifier)))))
