test/corpus/describe.txt
=================================
DESCRIBE table
=================================

describe Incident

---
(source_file
  (describe_statement
    (identifier)))

=================================
DESCRIBE sub-table
=================================

describe Incident.Asset

---
(source_file
  (describe_statement
    (identifier)))
