test/corpus/exists.txt
================================================================================
SELECT statement with EXISTS condition
================================================================================

SELECT C.ID FROM Contact C WHERE EXISTS (SELECT * FROM DUAL)

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (identifier))
    (from_clause
      (alias
        (identifier)
        (identifier)))
    (where_clause
      (exists_condition
        (select_clause)
        (from_clause
          (identifier))))))

================================================================================
SELECT statement with NOT EXISTS condition
================================================================================

SELECT C.ID FROM Contact C WHERE NOT EXISTS (SELECT * FROM DUAL)

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (identifier))
    (from_clause
      (alias
        (identifier)
        (identifier)))
    (where_clause
      (compound_condition
        (exists_condition
          (select_clause)
          (from_clause
            (identifier)))))))
