test/corpus/expr_compound.txt
================================================================================
SELECT statement with plus expression and null condition
================================================================================

SELECT Contact.ID + 2
FROM Contact 
WHERE Contact.CreatedTime 
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (compound_expression
        (identifier)
        (integer)))
    (from_clause
      (identifier))
    (where_clause
      (null_condition
        (identifier)))))

================================================================================
SELECT statement with concat string
================================================================================

SELECT (Contact.Name.Last || Contact.Name.First)  
FROM Contact
WHERE Contact.CreatedTime 
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (compound_expression
        (compound_expression
          (identifier)
          (identifier))))
    (from_clause
      (identifier))
    (where_clause
      (null_condition
        (identifier)))))

================================================================================
SELECT statement with MAX(ID) - number
================================================================================
SELECT MAX(Contact.ID) - 2
FROM Contact 
WHERE Contact.CreatedTime 
--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (compound_expression
        (built_in_function_expression
          (function)
          (arguments
            (identifier)))
        (integer)))
    (from_clause
      (identifier))
    (where_clause
      (null_condition
        (identifier)))))
